force-app/main/default/objects/Product2/fields/Annuity_product__c.field-meta.xml
<CustomField>
    <fullName>Annuity_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Revenue product</label>
    <type>Checkbox</type>
</CustomField>