force-app/main/default/objects/Product2/fields/Available_as_Connected_HWM__c.field-meta.xml
<CustomField>
    <fullName>Available_as_Connected_HWM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available as Connected HWM</label>
    <type>Checkbox</type>
</CustomField>