force-app/main/default/objects/Product2/fields/Available_for_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Subscription</label>
    <type>Checkbox</type>
</CustomField>