force-app/main/default/objects/Product2/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>CATM</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OnATM Financial Services</fullName>
            </value>
            <value>
                <fullName>OnATM Retail Services</fullName>
            </value>
            <value>
                <fullName>OnATM Experience Delivery</fullName>
            </value>
            <value>
                <fullName>OnATM Experience Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>