force-app/main/default/objects/Product2/fields/DataHubReferenceKey__c.field-meta.xml
<CustomField>
    <fullName>DataHubReferenceKey__c</fullName>
    <label>Data Hub Reference Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>