force-app/main/default/objects/Product2/fields/L0_Category__c.field-meta.xml
<CustomField>
    <fullName>L0_Category__c</fullName>
    <inlineHelpText>Level 0 Marketing Category of the Product</inlineHelpText>
    <label>L0 Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>T&amp;T</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>