force-app/main/default/objects/Product2/fields/L0_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>L0_Category_Text__c</fullName>
    <label>L0 LOB Text</label>
    <type>TextArea</type>
</CustomField>