force-app/main/default/objects/Product2/fields/L2_Category__c.field-meta.xml
<CustomField>
    <fullName>L2_Category__c</fullName>
    <inlineHelpText>Level 2 Marketing Category of the Product</inlineHelpText>
    <label>L2 Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIN: Activate</fullName>
            </value>
            <value>
                <fullName>FIN: Archive Storage Solutions</fullName>
            </value>
            <value>
                <fullName>FIN: ATM Modules</fullName>
            </value>
            <value>
                <fullName>FIN: ATM UPGRADE KITS</fullName>
            </value>
            <value>
                <fullName>FIN: Back Office Solutions</fullName>
            </value>
            <value>
                <fullName>FIN: Cash Dispense ATMs</fullName>
            </value>
            <value>
                <fullName>FIN: CASH RECYCLING ATMs</fullName>
            </value>
            <value>
                <fullName>FIN: Clearhouse Solutions</fullName>
            </value>
            <value>
                <fullName>FIN: Connections</fullName>
            </value>
            <value>
                <fullName>FIN: DISCONTINUED ATMs</fullName>
            </value>
            <value>
                <fullName>FIN: Edge</fullName>
            </value>
            <value>
                <fullName>FIN: Enterprise Fraud</fullName>
            </value>
            <value>
                <fullName>FIN: First Line Maintenance</fullName>
            </value>
            <value>
                <fullName>FIN: Fractals</fullName>
            </value>
            <value>
                <fullName>FIN: Image Transports</fullName>
            </value>
            <value>
                <fullName>FIN: Kalpana</fullName>
            </value>
            <value>
                <fullName>FIN: MULTI-FUNCTION ATMs</fullName>
            </value>
            <value>
                <fullName>FIN: Remote Deposit Capture</fullName>
            </value>
            <value>
                <fullName>FIN: Security</fullName>
            </value>
            <value>
                <fullName>FIN: Self Service Device Management</fullName>
            </value>
            <value>
                <fullName>FIN: Transaction Gateway</fullName>
            </value>
            <value>
                <fullName>FIN: Transaction Manager</fullName>
            </value>
            <value>
                <fullName>FIN: Transaction Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>T&amp;T: Converged Solutions</fullName>
            </value>
            <value>
                <fullName>T&amp;T: Customer Flow Mgmt</fullName>
            </value>
            <value>
                <fullName>T&amp;T: Digital Signage</fullName>
            </value>
            <value>
                <fullName>T&amp;T: Enactor POS</fullName>
            </value>
            <value>
                <fullName>T&amp;T: Firewall Management</fullName>
            </value>
            <value>
                <fullName>T&amp;T: IoT</fullName>
            </value>
            <value>
                <fullName>T&amp;T: IP Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>