force-app/main/default/objects/Product2/fields/L2_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>L2_Category_Text__c</fullName>
    <label>L2 Solution Offer Text</label>
    <type>TextArea</type>
</CustomField>