force-app/main/default/objects/Product2/fields/L4_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>L4_Category_Text__c</fullName>
    <label>L4 Topline Text</label>
    <type>TextArea</type>
</CustomField>