force-app/main/default/objects/Product2/fields/LegacySKU__c.field-meta.xml
<CustomField>
    <fullName>LegacySKU__c</fullName>
    <description>The Digital Insight Product Code</description>
    <inlineHelpText>The Digital Insight Product Code</inlineHelpText>
    <label>LegacySKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>