force-app/main/default/objects/Product2/fields/MarketProductIds__c.field-meta.xml
<CustomField>
    <fullName>MarketProductIds__c</fullName>
    <label>Market Product Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>