force-app/main/default/objects/Product2/fields/OPID__c.field-meta.xml
<CustomField>
    <fullName>OPID__c</fullName>
    <description>This field is synced from Zuora Product to NSC Product2.</description>
    <label>OPID(Text)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>