force-app/main/default/objects/Product2/fields/OriginalCorporation__c.field-meta.xml
<CustomField>
    <fullName>OriginalCorporation__c</fullName>
    <label>Original Corporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>