force-app/main/default/objects/Product2/fields/Pmdm_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Pmdm_Product_Category__c</fullName>
    <label>Pmdm Product Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>