force-app/main/default/objects/Product2/fields/Pmdm_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Pmdm_Product_Status__c</fullName>
    <label>Pmdm Product Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>