force-app/main/default/objects/Product2/fields/PMDM_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>PMDM_Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>PMDM_Unique_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>