force-app/main/default/objects/Product2/fields/Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Name__c</fullName>
    <label>Product Line Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computers Communication Systems</fullName>
            </value>
            <value>
                <fullName>Computers Other</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Consulting Svcs - HSR</fullName>
            </value>
            <value>
                <fullName>CP Gateway - HSR</fullName>
            </value>
            <value>
                <fullName>Custom Development - HSR</fullName>
            </value>
            <value>
                <fullName>Customer Services</fullName>
            </value>
            <value>
                <fullName>Entry Level Servers</fullName>
            </value>
            <value>
                <fullName>Financial Image and Payment Systems</fullName>
            </value>
            <value>
                <fullName>Financial Other</fullName>
            </value>
            <value>
                <fullName>Financial Self Service Cash</fullName>
            </value>
            <value>
                <fullName>Hardware - HSR</fullName>
            </value>
            <value>
                <fullName>Hosting - HSR</fullName>
            </value>
            <value>
                <fullName>HW Maintenance - HSR</fullName>
            </value>
            <value>
                <fullName>Installations - HSR</fullName>
            </value>
            <value>
                <fullName>NCR Consumables</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Computers</fullName>
            </value>
            <value>
                <fullName>Radiant Payment Services - HSR</fullName>
            </value>
            <value>
                <fullName>Retail 3rd Party</fullName>
            </value>
            <value>
                <fullName>Retail Apps - HSR</fullName>
            </value>
            <value>
                <fullName>Retail Customer Management &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Retail Logistics &amp; Supply Chain</fullName>
            </value>
            <value>
                <fullName>Retail Merchandising Solutions</fullName>
            </value>
            <value>
                <fullName>Retail RealPOS</fullName>
            </value>
            <value>
                <fullName>Retail RealPrice</fullName>
            </value>
            <value>
                <fullName>Retail RealScan</fullName>
            </value>
            <value>
                <fullName>Retail SelfServ Checkout</fullName>
            </value>
            <value>
                <fullName>Retail Services</fullName>
            </value>
            <value>
                <fullName>Retail Store &amp; Sales Channels Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>