force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Topline</fullName>
                <default>true</default>
                <label>Topline</label>
            </value>
            <value>
                <fullName>Zuora Product</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>SID</fullName>
            </value>
            <value>
                <fullName>PID</fullName>
            </value>
            <value>
                <fullName>Sub-Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>