force-app/main/default/objects/Product2/fields/qtc_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Bundle_Type__c</fullName>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>A La Carte</fullName>
            </value>
            <value>
                <fullName>Core HW BOH</fullName>
            </value>
            <value>
                <fullName>Core HW FOH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>