force-app/main/default/objects/Product2/fields/qtc_Exclude_from_ERP__c.field-meta.xml
<CustomField>
    <fullName>qtc_Exclude_from_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to exclude products from being sent to ERP.</description>
    <inlineHelpText>Used to exclude products from being sent to ERP.</inlineHelpText>
    <label>Exclude from ERP</label>
    <type>Checkbox</type>
</CustomField>