force-app/main/default/objects/Product2/fields/qtc_Interchange_Cost_Percentage__c.field-meta.xml
<CustomField>
    <fullName>qtc_Interchange_Cost_Percentage__c</fullName>
    <description>Only for use on Product: NCR Payments First - Headline</description>
    <inlineHelpText>Only for use on Product: NCR Payments First - Headline</inlineHelpText>
    <label>Interchange Cost %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>