force-app/main/default/objects/Product2/fields/qtc_MDM_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>qtc_MDM_Product_Id__c</fullName>
    <description>Created by ATG for use with CPQ. This value will be passed to ERP via integration</description>
    <label>MDM Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>