force-app/main/default/objects/Product2/fields/qtc_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>qtc_Pass_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass-Through</label>
    <type>Checkbox</type>
</CustomField>