force-app/main/default/objects/Product2/fields/qtc_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>qtc_Product_Code__c</fullName>
    <formula>ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code - CPQ TWIN</label>
    <type>Text</type>
</CustomField>