force-app/main/default/objects/Product2/fields/qtc_Service_Coverage_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>qtc_Service_Coverage_Code_Description__c</fullName>
    <label>Service Coverage Code Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>