force-app/main/default/objects/Product2/fields/qtc_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>qtc_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% of Transaction Amount</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Device - Flat rate</fullName>
            </value>
            <value>
                <fullName>Flat rate</fullName>
            </value>
            <value>
                <fullName>Flat Rate Annually</fullName>
            </value>
            <value>
                <fullName>Flat Rate Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly Price Floor</fullName>
            </value>
            <value>
                <fullName>Occurrence</fullName>
            </value>
            <value>
                <fullName>Occurrence - Above/No</fullName>
            </value>
            <value>
                <fullName>Occurrence - All</fullName>
            </value>
            <value>
                <fullName>Occurrence - No</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Per Bundle per month</fullName>
            </value>
            <value>
                <fullName>Per item</fullName>
            </value>
            <value>
                <fullName>Per items</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
            <value>
                <fullName>Per Occurrence</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Transaction (Per Email)</fullName>
            </value>
            <value>
                <fullName>Transaction (Per MMS)</fullName>
            </value>
            <value>
                <fullName>Transaction (Per SMS)</fullName>
            </value>
            <value>
                <fullName>Transaction (Per Text)</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Run/Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>