force-app/main/default/objects/Product2/fields/RequiredSPPInterfaceType__c.field-meta.xml
<CustomField>
    <fullName>RequiredSPPInterfaceType__c</fullName>
    <label>Required SPP Interface Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>