force-app/main/default/objects/Product2/fields/ROR_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ROR_Created_Date__c</fullName>
    <label>ROR Created Date</label>
    <type>DateTime</type>
</CustomField>