force-app/main/default/objects/Product2/fields/ROR_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ROR_LastModifiedBy__c</fullName>
    <label>ROR LastModifiedBy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>