force-app/main/default/objects/Product2/fields/Service_Offer_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Offer_Category__c</fullName>
    <label>Revenue Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>