force-app/main/default/objects/Product2/fields/Solution_Manager__c.field-meta.xml
<CustomField>
    <fullName>Solution_Manager__c</fullName>
    <inlineHelpText>Solutions Manager responsible for this Product.</inlineHelpText>
    <label>Solution Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>