force-app/main/default/objects/Product2/fields/Solution_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Solution_Portfolio__c</fullName>
    <label>Offer Portfolio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALARIC</fullName>
            </value>
            <value>
                <fullName>CASH MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>CHECK &amp; IMAGE</fullName>
            </value>
            <value>
                <fullName>DIGITAL BANKING</fullName>
            </value>
            <value>
                <fullName>eCLIPBOARD</fullName>
            </value>
            <value>
                <fullName>ENTERPRISE FRAUD AND SECURITY</fullName>
            </value>
            <value>
                <fullName>ENTERTAINMENT SELF SERVICE</fullName>
            </value>
            <value>
                <fullName>FINANCIAL SELF SERVICE</fullName>
            </value>
            <value>
                <fullName>GAMING</fullName>
            </value>
            <value>
                <fullName>GEMS</fullName>
            </value>
            <value>
                <fullName>HEALTHCARE ASSISTED SELF SRV &amp; PLATFORM</fullName>
            </value>
            <value>
                <fullName>HEALTHCARE SELF-SERVICE</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>MULTI CHANNEL SOFTWARE</fullName>
            </value>
            <value>
                <fullName>PAYMENTS</fullName>
            </value>
            <value>
                <fullName>PC / ELS</fullName>
            </value>
            <value>
                <fullName>RETAIL ASSISTED SERVICE</fullName>
            </value>
            <value>
                <fullName>RETAIL SELF SERVICE</fullName>
            </value>
            <value>
                <fullName>RETALIX</fullName>
            </value>
            <value>
                <fullName>SELF-SERVICE REINVENTION</fullName>
            </value>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>TRANSACTION PROCESSING</fullName>
            </value>
            <value>
                <fullName>TRAVEL SELF SERVICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>