force-app/main/default/objects/Product2/fields/Topline_Product_Lkp__c.field-meta.xml
<CustomField>
    <fullName>Topline_Product_Lkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated with topline matching with Topline Product text field on Product2.</description>
    <label>Topline Product Lkp</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Topline Product Lookup)</relationshipLabel>
    <relationshipName>Topline_Product_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>