force-app/main/default/objects/Product2/fields/ToplineProduct__c.field-meta.xml
<CustomField>
    <fullName>ToplineProduct__c</fullName>
    <description>This field is used to sync Topline Product field on Product in Zuora to Topline Product field on Product2 in NSC.</description>
    <label>Topline Product(Text)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Aggregation (default)</fullName>
            </value>
            <value>
                <fullName>Account Opening</fullName>
            </value>
            <value>
                <fullName>ACH / Wire</fullName>
            </value>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Check Imaging</fullName>
            </value>
            <value>
                <fullName>Check Reordering</fullName>
            </value>
            <value>
                <fullName>CheckFree Fees Collected</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Create Your Own</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>CuneXus</fullName>
            </value>
            <value>
                <fullName>Deferred Revenue - Annual Conference</fullName>
            </value>
            <value>
                <fullName>Digital Banking Communications</fullName>
            </value>
            <value>
                <fullName>Digital Banking Other</fullName>
            </value>
            <value>
                <fullName>Digital Banking Security</fullName>
            </value>
            <value>
                <fullName>Early Warning System</fullName>
            </value>
            <value>
                <fullName>EyeVerify</fullName>
            </value>
            <value>
                <fullName>FinanceWorks</fullName>
            </value>
            <value>
                <fullName>Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>LivePerson</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Multi-Factor Authenication</fullName>
            </value>
            <value>
                <fullName>New Account Opening</fullName>
            </value>
            <value>
                <fullName>Online Fraud (RSA)</fullName>
            </value>
            <value>
                <fullName>Online Statements</fullName>
            </value>
            <value>
                <fullName>PFM Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>