force-app/main/default/objects/Product2/validationRules/Prevent_Users_from_CreatingAndModifying.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Users_from_CreatingAndModifying</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(  OR($Profile.Name =&quot;04 NSC UI Administrator&quot;                      
      )   )</errorConditionFormula>
    <errorMessage>We are in process of making Offer Portfolio/Advocated Solution changes for 2011. You would not be able to create/modify opportunity on 2/20/2011 in between 12:00 to 7:00 EST. Sorry for the inconvenience.</errorMessage>
</ValidationRule>