force-app/main/default/objects/Product2/listViews/GNSProducts.listView-meta.xml
<ListView>
    <fullName>GNSProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Solution_Portfolio__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Line_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Solution_Portfolio__c</field>
        <operation>equals</operation>
        <value>Global Network Solutions</value>
    </filters>
    <label>GNS Products</label>
</ListView>