force-app/main/default/objects/Product2/listViews/HealthCare.listView-meta.xml
<ListView>
    <fullName>HealthCare</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Solution_Portfolio__c</field>
        <operation>equals</operation>
        <value>Healthcare Self-Service</value>
    </filters>
    <label>HealthCare</label>
</ListView>