force-app/main/default/objects/Product2/listViews/Hospitality_Products_Details.listView-meta.xml
<ListView>
    <fullName>Hospitality_Products_Details</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Product_Category__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Solution_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Solution_Portfolio__c</field>
        <operation>equals</operation>
        <value>Hospitality</value>
    </filters>
    <label>Hospitality Products_Details</label>
</ListView>